--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "author": "Kimminsu",
   "dependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.8.7",
+    "@babel/preset-env": "^7.9.0",
     "express": "^4.17.1"
   },
-  "scripts":{
-    "start" : "node index.js"
+  "scripts": {
+    "start": "nodemon --exec babel-node index.js"
   }
 }
