--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
     "helmet": "^3.22.0",
     "mongoose": "^5.9.10",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.2",
     "pug": "^2.0.4"
   },
   "scripts": {
     "start": "nodemon --exec babel-node init.js --delay 2"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2"
   }
 }
